Fixed bug #50816 (Using class constants in array definition fails).